vlib/v/checker/tests/const_field_sub_err.out
vlib/v/checker/tests/const_field_sub_err.v:6:2: error: cannot assign to constant `a` 
    4 | 
    5 | fn main() {
    6 |     a -= 1
      |     ^
    7 | }
